--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="">
                 <div class="carousel w-full h-[60vh] rounded-[10px]">
                     <div id="slide1" class="carousel-item relative w-full">
-                      <img src="images/1.png" class="w-full" />
+                      <img src="Images/1.png" class="w-full" />
                       <div class="absolute flex gap-5  transform  left-8 bottom-8">
                         <a href="#slide4" class="btn btn-circle">❮</a> 
                         <a href="#slide2" class="btn btn-circle">❯</a>
@@ -78,7 +78,7 @@
 
 
                     <div id="slide2" class="carousel-item relative w-full">
-                      <img src="images/2.png" class="w-full" />
+                      <img src="Images/2.png" class="w-full" />
                       <div class="absolute flex gap-5  transform  left-8 bottom-8">
                         <a href="#slide1" class="btn btn-circle">❮</a> 
                         <a href="#slide3" class="btn btn-circle">❯</a>
@@ -87,7 +87,7 @@
 
 
                     <div id="slide3" class="carousel-item relative w-full">
-                      <img src="images/3.png" class="w-full" />
+                      <img src="Images/3.png" class="w-full" />
                       <div class="absolute flex gap-5  transform  left-8 bottom-8">
                         <a href="#slide2" class="btn btn-circle">❮</a> 
                         <a href="#slide4" class="btn btn-circle">❯</a>
@@ -96,7 +96,7 @@
 
 
                     <div id="slide4" class="carousel-item relative w-full">
-                      <img src="images/4.png" class="w-full" />
+                      <img src="Images/4.png" class="w-full" />
                       <div class="absolute flex gap-5  transform  left-8 bottom-8">
                         <a href="#slide3" class="btn btn-circle">❮</a> 
                         <a href="#slide1" class="btn btn-circle">❯</a>
