--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                         
 
                         
-                    <div class="space-y-5 mt-2">
+                    <div class="space-y-5">
                         <div class="flex gap-5">
                             <div class="flex"><img src="Images/Frame.png" alt="">
                                 5.0
