--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
-                  <a class="btn btn-ghost font-bold text-3xl"><h2>Hockey<span class="text-color-primary">’</span>s</h2></a>
+                  <a class="btn btn-ghost font-extrabold text-3xl"><h2>Hockey<span class="text-color-primary">’</span>s</h2></a>
                 </div>
                 <div class="navbar-center hidden lg:flex">
                   <ul class="menu menu-horizontal text-[16px] px-1">
@@ -158,7 +158,7 @@
     <main>
         <!-- Professional Hockeys Club -->
       <section>
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-52 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
@@ -175,7 +175,7 @@
     <!-- 87% -->
 
     <section>
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-20">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-12">
 
             <div class="grid grid-cols-1 lg:grid-cols-4 gap-6">
                 <div class="items-center justify-center text-center mx-auto">
@@ -233,12 +233,12 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-52 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
-                <h3 class="text-2xl font-bold">Program Sections</h3>
+                <h3 class="text-2xl font-extrabold">Program Sections</h3>
                 <p class="lg:w-2/3 flex items-center justify-center text-center mx-auto mt-8 ">Hockey program sections are different parts or aspects of a hockey program that can help players improve their skills. </p>
             </div>
             </div>
@@ -303,13 +303,13 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 mt-52">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
-                <h3 class="text-4xl font-semibold">Our New Products</h3>
-                <p class="w-2/3 flex items-center justify-center text-center mx-auto mt-8 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
+                <h3 class="text-2xl font-extrabold">Our New Products</h3>
+                <p class="lg:w-2/3 flex items-center justify-center text-center mx-auto mt-4 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
             </div>
             </div>
             <div class="divider"></div>
@@ -317,7 +317,7 @@
 
 
         <!-- card -->
-        <div class="container mx-auto lg:px-16 px-8 mt-20 mb-52">
+        <div class="container mx-auto lg:px-16 px-8 mt-12 ">
             <div class="  ">
                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
 
@@ -523,22 +523,22 @@
     <section>
         <!-- Clients Question -->
 
-        <div class="container mx-auto lg:px-16 px-8">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
-                <h3 class="text-4xl font-semibold">Clients Question</h3>
-                <p class="w-2/3 flex items-center justify-center text-center mx-auto mt-8 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
+                <h3 class="text-2xl font-extrabold">Clients Question</h3>
+                <p class="lg:w-2/3 flex items-center justify-center text-center mx-auto mt-4 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
             </div>
             </div>
             <div class="divider"></div>
         </div>
 
 
-    <div class="container mx-auto lg:px-16 px-8 my-20">
+    <div class="container mx-auto lg:px-16 px-8 mt-12 ">
     <div class="grid grid-cols-1 lg:grid-cols-2 border-2 rounded-xl p-8 gap-6">
         <div class="flex flex-1 justify-center items-center">
-            <img class="lg:w-[500px] w-96 h-72 lg:h-[80vh]" src="Images/11.png" alt="">
+            <img class="lg:w-[500px] w-full  lg:h-[85vh]" src="Images/11.png" alt="">
         </div>
 
          <div class=" space-y-2">
@@ -619,12 +619,12 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 mt-40 mb-14">
+        <div class="container mx-auto lg:px-16 px-8 mb-12 lg:mt-32 mt-32">
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
-                <h3 class="text-4xl font-semibold">Get In Touch</h3>
-                <p class="w-2/3 flex items-center justify-center text-center mx-auto mt-8 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
+                <h3 class="text-2xl font-extrabold">Get In Touch</h3>
+                <p class="lg:w-2/3 flex items-center justify-center text-center mx-auto mt-4 ">These are the ultimate blades for hockey players who want to customize their skates and optimize their performance. </p>
             </div>
             </div>
             <div class="divider"></div>
@@ -637,27 +637,27 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 ">
 
                 <div class="border-2 p-6 rounded-3xl space-y-6 ">
-                    <div class="w-full h-[30vh] rounded-3xl bg-background-1">
-                        <div class="pt-4 pl-8">
+                    <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-1">
+                        <div class="pt-8 pl-8">
                             <img class="py-2" src="Images/Group 1.png" alt="">
-                        <p class="text-xl ">Phone Number : </p>
-                        <p class="text-xl font-bold">(+62) 123-321-543</p>
+                        <p class=" ">Phone Number : </p>
+                        <p class=" font-bold">(+62) 123-321-543</p>
                         </div>
                     </div>
 
-                    <div class="w-full h-[30vh] rounded-3xl bg-background-2">
-                        <div class="pt-4 pl-8">
+                    <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-2">
+                        <div class="pt-8 pl-8">
                             <img class="py-2" src="Images/Group 2.png" alt="">
-                        <p class="text-xl ">Phone Number : </p>
-                        <p class="text-xl font-bold">hockeys@support.com</p>
+                        <p class=" ">Phone Number : </p>
+                        <p class="font-bold">hockeys@support.com</p>
                         </div>
                     </div>
 
-                    <div class="w-full h-[30vh] rounded-3xl bg-background-3">
-                        <div class="pt-4 pl-6">
+                    <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-3">
+                        <div class="pt-8 pl-6">
                             <img class="py-2" src="Images/Group 3.png" alt="">
-                        <p class="text-xl ">Location : </p>
-                        <p class="text-xl font-bold">152/1 Mohakhali Wireless Gate</p>
+                        <p class="">Location : </p>
+                        <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
                         </div>
                     </div>
 
@@ -668,11 +668,11 @@
                 <div class="lg:col-span-2 space-y-7">
                    <div class="grid gap-12 grid-cols-1 lg:grid-cols-2">
                     <div>
-                        <label class="text-xl font-bold" for="">Your Name</label>
+                        <label class="font-bold" for="">Your Name</label>
                     <input type="text" placeholder="Enter your full name" class="border-none bg-background mt-2 input input-bordered w-full rounded-2xl h-[8vh]" />
                     </div>
                     <div>
-                        <label class="text-xl font-bold" for="">Your Email</label>
+                        <label class="font-bold" for="">Your Email</label>
                     <input type="text" placeholder="Enter your email" class="border-none bg-background mt-2 input input-bordered w-full rounded-2xl h-[8vh]" />
                     </div>
                    </div>
@@ -682,36 +682,24 @@
                    <div class="lg:col-span-2 ">
                     <div class="grid gap-12  grid-cols-1 lg:grid-cols-2">
                      <div>
-                         <label class="text-xl font-bold" for="">Subject</label>
+                         <label class="font-bold" for="">Subject</label>
                      <input type="text" placeholder="Enter your subject" class="border-none bg-background mt-2 input input-bordered w-full rounded-2xl h-[8vh] " />
                      </div>
                      <div>
-                        <label class="text-xl font-bold" for="">Phone Number</label>
+                        <label class="font-bold" for="">Phone Number</label>
                         <input type="text" placeholder="Enter your phone number" class="border-none bg-background mt-2 input input-bordered w-full rounded-2xl h-[8vh] " />
                      </div>
                     </div>
 
 
                     <div class="mt-7">
-                        <label class="text-xl font-bold" for="">Message</label>
+                        <label class="font-bold" for="">Message</label>
                         <textarea class="w-full h-[50vh] mt-3 rounded-3xl border-none bg-background textarea textarea-bordered" placeholder="Write your message"></textarea>
                     </div>
 
-                    <button class="w-full h-[8vh]  mt-7 p-3 rounded-2xl bg-color-primary text-xl font-bold text-white">Send Message</button>
- 
-
-
-                   
-
-
-
+                    <button class="w-full h-[8vh]  mt-7 p-3 rounded-2xl bg-color-primary font-bold text-white">Send Message</button>
                 </div>
-
-
-
-                
             </div>
-
         </div>
     </section>
 
@@ -721,11 +709,11 @@
 
 
     <!-- Social Media -->
-    <section class="mt-24">
-        <div class="container mx-auto lg:px-16 px-8 mb-30 lg:mb-40">
+    <section class="mt-12">
+        <div class="container mx-auto lg:px-16 px-8 mb-30 ">
             <div class="w-full h-[30vh] bg-background rounded-xl space-y-6 flex flex-col items-center justify-center">
-                <h3 class="text-4xl font-extrabold">Social Media</h3>
-                <img class="w-60" src="Images/Social.png" alt="">
+                <h3 class="text-2xl font-extrabold">Social Media</h3>
+                <img class="w-40" src="Images/Social.png" alt="">
             </div>
         </div>
     </section>
@@ -738,7 +726,7 @@
 
 
 
-    <footer class="flex p-10 bg-black h-full items-center mx-auto justify-around gap-6">
+    <footer class="lg:mt-32 mt-32 flex p-10 bg-black h-full items-center mx-auto justify-around gap-6">
         <div class="grid grid-cols-1 lg:grid-cols-4 items-center lg:flex justify-around lg:gap-52">
         <aside class=" space-y-2 mt-6">
             <h2 class="text-white text-3xl">Get In Touch</h2>
