--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 
 
-            <div class="container mx-auto lg:px-16 px-8 mt-12 bg-black rounded-xl lg:hidden p-8 space-y-3 text-white">
+            <div class="container mx-auto lg:px-16 px-8 mt-2 bg-black rounded-xl lg:hidden p-8 space-y-3 text-white">
                 <h6 class="font-bold text-[16px]">Meet all the heroes from the field</h6>
                 <p class="text-sm">This essay from Infinity Learn provides a detailed look at the sport of hockey, including its history. </p>
             </div>
@@ -158,7 +158,7 @@
     <main>
         <!-- Professional Hockeys Club -->
       <section>
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-12">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
@@ -233,7 +233,7 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-12">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
@@ -303,7 +303,7 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-12">
 
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
@@ -523,7 +523,7 @@
     <section>
         <!-- Clients Question -->
 
-        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 lg:mt-32 mt-12">
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
@@ -619,7 +619,7 @@
 
     <section>
 
-        <div class="container mx-auto lg:px-16 px-8 mb-12 lg:mt-32 mt-32">
+        <div class="container mx-auto lg:px-16 px-8 mb-12 lg:mt-32 mt-12">
             <div class="divider"></div> 
             <div class="flex items-center justify-center text-center">
             <div class="">
@@ -636,9 +636,9 @@
 
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 ">
 
-                <div class="border-2 p-6 rounded-3xl space-y-6 ">
+                <div class="border-2 p-6 rounded-3xl space-y-5 ">
                     <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-1">
-                        <div class="pt-8 pl-8">
+                        <div class="lg:pt-8 pt-4 pl-8">
                             <img class="py-2" src="Images/Group 1.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class=" font-bold">(+62) 123-321-543</p>
@@ -646,7 +646,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-2">
-                        <div class="pt-8 pl-8">
+                        <div class="lg:pt-8 pt-4 pl-8">
                             <img class="py-2" src="Images/Group 2.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class="font-bold">hockeys@support.com</p>
@@ -654,7 +654,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh] h-[20vh] rounded-3xl bg-background-3">
-                        <div class="pt-8 pl-6">
+                        <div class="lg:pt-8 pt-4 pl-6">
                             <img class="py-2" src="Images/Group 3.png" alt="">
                         <p class="">Location : </p>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
@@ -726,7 +726,7 @@
 
 
 
-    <footer class="lg:mt-32 mt-32 flex p-10 bg-black h-full items-center mx-auto justify-around gap-6">
+    <footer class="lg:mt-32 mt-12 flex p-10 bg-black h-full items-center mx-auto justify-around gap-6">
         <div class="grid grid-cols-1 lg:grid-cols-4 items-center lg:flex justify-around lg:gap-52">
         <aside class=" space-y-2 mt-6">
             <h2 class="text-white text-3xl">Get In Touch</h2>
