thirteen number commit

--- a/index.html
+++ b/index.html
@@ -637,24 +637,24 @@
             <div class="grid grid-cols-1 lg:grid-cols-3 gap-10 ">
 
                 <div class="border-2 p-6 rounded-3xl space-y-5 ">
-                    <div class="w-full lg:h-[30vh] h-[30vh] rounded-3xl bg-background-1">
-                        <div class="lg:pt-8 pt-4 pl-8">
+                    <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-1">
+                        <div class="lg:pt-8 pt-2 pl-4">
                             <img class="py-2" src="Images/Group 1.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class=" font-bold">(+62) 123-321-543</p>
                         </div>
                     </div>
 
-                    <div class="w-full lg:h-[30vh] h-[30vh] rounded-3xl bg-background-2">
-                        <div class="lg:pt-8 pt-4 pl-8">
+                    <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-2">
+                        <div class="lg:pt-8 pt-2 pl-4">
                             <img class="py-2" src="Images/Group 2.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class="font-bold">hockeys@support.com</p>
                         </div>
                     </div>
 
-                    <div class="w-full lg:h-[30vh] h-[30vh] rounded-3xl bg-background-3">
-                        <div class="lg:pt-8 pt-4 pl-6">
+                    <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-3">
+                        <div class="lg:pt-8 pt-2 pl-4">
                             <img class="py-2" src="Images/Group 3.png" alt="">
                         <p class="">Location : </p>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
