fifteen number commit

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
           <!-- card 2 -->
             <div class=" p-12 lg:p-6 rounded-3xl border-2">
                 <div class="lg:flex justify-center items-center mx-auto gap-6">
-                    <img class="w-full h-[37vh] object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/6.png" alt="">
+                    <img class="w-full  object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/6.png" alt="">
                 <div class="space-y-5">
                     <div class="flex gap-5">
                         <div class="flex"><img src="Images/Frame.png" alt="">
@@ -391,7 +391,7 @@
        <!-- card 3 -->
         <div class=" p-12 lg:p-6 rounded-3xl border-2">
             <div class="lg:flex justify-center items-center mx-auto gap-6">
-                <img class="w-full h-[37vh] object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/7.png" alt="">
+                <img class="w-full object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/7.png" alt="">
             <div class="space-y-5">
                 <div class="flex gap-5">
                     <div class="flex"><img src="Images/Frame.png" alt="">
@@ -423,7 +423,7 @@
 
           <div class=" p-12 lg:p-6 rounded-3xl border-2">
             <div class="lg:flex justify-center items-center mx-auto gap-6">
-                <img class="w-full h-[37vh] object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/8.png" alt="">
+                <img class="w-full  object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/8.png" alt="">
             <div class="space-y-5">
                 <div class="flex gap-5">
                     <div class="flex"><img src="Images/Frame.png" alt="">
@@ -455,7 +455,7 @@
 
         <div class=" p-12 lg:p-6 rounded-3xl border-2">
             <div class="lg:flex justify-center items-center mx-auto gap-6">
-                <img class="w-full h-[37vh] object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/9.png" alt="">
+                <img class="w-full  object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/9.png" alt="">
             <div class="space-y-5">
                 <div class="flex gap-5">
                     <div class="flex"><img src="Images/Frame.png" alt="">
@@ -487,7 +487,7 @@
 
         <div class=" p-12 lg:p-6 rounded-3xl border-2">
             <div class="lg:flex justify-center items-center mx-auto gap-6">
-                <img class="w-full h-[37vh] object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/10.png" alt="">
+                <img class="w-full  object-center object-cover rounded-3xl lg:h-auto lg:w-auto" src="Images/10.png" alt="">
             <div class="space-y-5">
                 <div class="flex gap-5">
                     <div class="flex"><img src="Images/Frame.png" alt="">
@@ -538,7 +538,7 @@
     <div class="container mx-auto lg:px-16 px-8 mt-12 ">
     <div class="grid grid-cols-1 lg:grid-cols-2 border-2 rounded-xl p-8 gap-6">
         <div class="flex flex-1 justify-center items-center">
-            <img class="lg:w-[500px] w-full  lg:h-[85vh]" src="Images/11.png" alt="">
+            <img class="lg:w-[500px] w-full" src="Images/11.png" alt="">
         </div>
 
          <div class=" space-y-2">
@@ -638,7 +638,7 @@
 
                 <div class="border-2 p-6 rounded-3xl space-y-5 ">
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-1">
-                        <div class="lg:pt-8 pt-2 pl-4">
+                        <div class="lg:pt-8 pt-1 pl-4">
                             <img class="py-2" src="Images/Group 1.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class=" font-bold">(+62) 123-321-543</p>
@@ -646,7 +646,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-2">
-                        <div class="lg:pt-8 pt-2 pl-4">
+                        <div class="lg:pt-8 pt-1 pl-4">
                             <img class="py-2" src="Images/Group 2.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class="font-bold">hockeys@support.com</p>
@@ -654,7 +654,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-3">
-                        <div class="lg:pt-8 pt-2 pl-4">
+                        <div class="lg:pt-8 pt-1 pl-4">
                             <img class="py-2" src="Images/Group 3.png" alt="">
                         <p class="">Location : </p>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
