sixteen number commit

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
 
                 <div class="border-2 p-6 rounded-3xl space-y-5 ">
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-1">
-                        <div class="lg:pt-8 pt-1 pl-4">
+                        <div class="lg:pt-8 pt-4 pb-4 pl-4">
                             <img class="py-2" src="Images/Group 1.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class=" font-bold">(+62) 123-321-543</p>
@@ -646,7 +646,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-2">
-                        <div class="lg:pt-8 pt-1 pl-4">
+                        <div class="lg:pt-8 pt-4 pb-4 pl-4">
                             <img class="py-2" src="Images/Group 2.png" alt="">
                         <p class=" ">Phone Number : </p>
                         <p class="font-bold">hockeys@support.com</p>
@@ -654,7 +654,7 @@
                     </div>
 
                     <div class="w-full lg:h-[30vh]  rounded-3xl bg-background-3">
-                        <div class="lg:pt-8 pt-1 pl-4">
+                        <div class="lg:pt-8 pt-4 pb-4 pl-4">
                             <img class="py-2" src="Images/Group 3.png" alt="">
                         <p class="">Location : </p>
                         <p class="font-bold">152/1 Mohakhali Wireless Gate</p>
