seventeen number commit

--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
     <div class="container mx-auto lg:px-16 px-8 mt-12 ">
     <div class="grid grid-cols-1 lg:grid-cols-2 border-2 rounded-xl p-8 gap-6">
         <div class="flex flex-1 justify-center items-center">
-            <img class="lg:w-[500px] w-full" src="Images/11.png" alt="">
+            <img class="lg:w-[500px] h-[40vh] rounded-2xl object-cover object-center w-full" src="Images/11.png" alt="">
         </div>
 
          <div class=" space-y-2">
